sandbox/output
Medicine.java:2: error: cannot find symbol
    public Medicine(String name, List<Prescription> prescriptions) {
                                 ^
  symbol:   class List
  location: class Medicine
Codeine.java:4: error: constructor Medicine in class Medicine cannot be applied to given types;
    public Codeine(List<Prescription> prescriptions) {
                                                     ^
  required: String,<any>
  found: no arguments
  reason: actual and formal argument lists differ in length
PatientTest.java:15: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                                                             ^
  symbol:   variable prozac
  location: class PatientTest
3 errors
